// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "articleId": "article1",
    "feedbackCount": 12,
    "feedbacks": Array [
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": "comment1",
        "score": 1,
      },
    ],
    "negativeFeedbackCount": 0,
    "ownVote": "UPVOTE",
    "positiveFeedbackCount": 12,
    "replyId": "reply1",
  },
}
`;

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 2`] = `
Object {
  "appId": "test",
  "articleId": "article1",
  "comment": "comment1",
  "createdAt": "2017-01-28T08:45:57.011Z",
  "replyId": "reply1",
  "score": 1,
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "test",
}
`;

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 3`] = `
Array [
  Object {
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 12,
    "replyId": "reply1",
  },
]
`;

exports[`CreateOrUpdateArticleReplyFeedback updates existing feedback 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "articleId": "article1",
    "feedbackCount": 11,
    "feedbacks": Array [
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": 1,
      },
      Object {
        "comment": null,
        "score": -1,
      },
    ],
    "negativeFeedbackCount": 1,
    "ownVote": "DOWNVOTE",
    "positiveFeedbackCount": 10,
    "replyId": "reply1",
  },
}
`;

exports[`CreateOrUpdateArticleReplyFeedback updates existing feedback 2`] = `
Object {
  "appId": "testClient",
  "articleId": "article1",
  "createdAt": "2017-01-01T00:00:00.000Z",
  "replyId": "reply1",
  "score": -1,
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "testUser",
}
`;
